# cshelve

./: .env.example  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: azure-tests.yml  compatibility.yml  examples.yml  performance-tests.yml  performances-tests.yml  performances.yml  quality.yml  release.yml  tests-end-to-end.yml  tests-integration.yml  tests-internals.yml  tests-sequential.yml  tests.yml  unit-tests.yml
compatibility/: read.py  write.py
cshelve/: __init__.py  _aws_s3.py  _azure.py  _azure_blob_storage.py  _azure_table.py  _compression.py  _data_processing.py  _database.py  _encryption.py  _factory.py  _flag.py  _in_memory.py  _parser.py  cloud_database.py  exceptions.py  provider_interface.py
cshelve/providers/: _azure_blob_storage.py  _factory.py  _itger.py
doc/source/: aws-s3.rst  azure-blob.rst  conf.py  encryption.rst  in-memory.rst  index.rst  introduction.rst  logging.rst  tutorial.rst
examples/asterix-and-obelix-database/: README.md  azure-connection-string.ini  azure-passwordless.ini  main.py  run-test.sh
performances/: README.md  main.py  production.results.ini  staging.results.ini  test-azure.ini  tests.py
tests/: test_cshelve.py  test_flag.py  test_interface.py
tests/configurations/: azure.ini  integration-azure-connection-string-without-env-var.ini  integration-azure-iter.ini  integration-azure-len.ini  integration-azure.ini  standard.ini
tests/end-to-end/: test_api.py  test_aws_auth.py  test_large.py  (+7 more)
(+74 files in other folders)
